syntax = "proto3";

package arcade;

enum NodeType {
    RESERVED = 0;
    DUMMY = 1;
    GAME = 2;
    PLAYER = 3;
    DISPLAY = 4;
}

message PingPong {
    int32 sequence_number = 1;
}

message DescribeRequest {
    string identifier = 1;
}

message DescribeResponse {
    string identifier = 1;
    NodeType type = 2;
}

service NodeService {
    rpc Ping (PingPong) returns (PingPong) {}
    rpc Describe (DescribeRequest) returns (DescribeResponse) {}
}
